# Bioimage-Analysis-Manager

./: .gitignore  README.MD
bam/skills/artifact/: SKILL.md
bam/skills/idea/: SKILL.md
bam/skills/init/: SKILL.md
bam/skills/log/: SKILL.md
bam/templates/: README.md  idea.md  log-types.yaml  manifest.yaml  method.md  results.md  worklog.md
bam/tui/: README.md  pyproject.toml
bam/tui/ba_tui/: __init__.py  cli.py  config.py  config_defaults.yaml  io.py  models.py  paths.py  scaffold.py  screens.py  styles.py  tui.py  utils.py  widgets.py  worklog.py
bam/tui/ba_tui/assets/: bam_icon_ascii.txt
bam/tui/ba_tui/handlers/: __init__.py  acquisition.py  collaborators.py  datasets.py  hardware.py  idea_artifact.py  method_preview.py  milestones.py  persistence.py  sync.py  tab_navigation.py  ui_state.py  worklog.py
bam/tui/ba_tui/screens/: __init__.py  acquisition.py  artifact.py  base.py  channel.py  collaborator.py  confirm.py  custom_input.py  dataset.py  delete_confirm.py  directory_picker.py  edit_session_modal.py  figure_element.py  figure_node.py  hardware.py  milestone.py  path_suggestions.py  session_note_modal.py  task_modal.py
bam/tui/ba_tui/tabs/: __init__.py  admin.py  artifact.py  hub.py  idea.py  init.py  log.py  manifest.py  outputs.py  science.py  setup.py
